Mon Nov 06 11:17:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/Service_Config.cpp:

          Implemented a fix for runtime problems in case
          ACE_HAS_NONSTATIC_OBJECT_MANAGER is defined (seen on VxWorks 6.3 RTP).

Sun Nov  5 14:14:51 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          Fix for Solaris x86.

Sat Nov  4 12:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos4*.h:
          Removed these files, these are ancient and not supported anymore

Fri Nov  3 18:12:36 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Unload_libACE.cpp (main): Reverted the ACE_OS::exit() from
          this since it's not supposed to be an ACE test.  Thanks to Simon
          Massey for reporting this.

Fri Nov 03 15:52:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:

          Bugfix in cmdline composition.

Fri Nov  3 15:15:43 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          Scoreboard cleanup.

Fri Nov 03 10:54:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_sys_time.inl:

          Fixed conversion warning on OpenVMS.

Fri Nov  3 00:39:04 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          One more optimization, this one to combine the methods for
          evaluating the IPv6 or IPv4 enabled status.

Fri Nov  3 00:32:27 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Select_Reactor_Base.inl:
        * ace/Select_Reactor_Base.cpp:
          Additional optimization for finding and unbinding event
          handlers. The solution moves the test for handles in range into
          the top-level find and unbind methods to allow the fix for bug
          2653 to continue to work in unbind while avoiding a double check
          for handles in range during a find.
